# FullStackEditor

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/xyz/panyi/fullstackeditor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/xyz/panyi/fullstackeditor/activity/: FilePickerActivity.kt  MainActivity.kt  VideoEditorActivity.kt
app/src/main/java/xyz/panyi/fullstackeditor/bridge/: NativeBridge.java
app/src/main/java/xyz/panyi/fullstackeditor/data/: PickerFile.kt  PickerParams.kt  RequestCodes.kt
app/src/main/java/xyz/panyi/fullstackeditor/util/: Log.kt
app/src/main/java/xyz/panyi/fullstackeditor/vm/: MediaQuery.kt
app/src/main/res/layout/: activity_file_picker.xml  activity_main.xml  activity_video_editor.xml  item_timeline_thumbnail.xml  item_video.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/xyz/panyi/fullstackeditor/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
